--- a/card1.html
+++ b/card1.html
@@ -63,8 +63,8 @@
     <div class="message" id="message">🎅 祝你节日快乐，心想事成！ 🎅</div>
     <!-- 背景音乐 -->
     <audio id="bg-music" loop>
-        <source src="music/wslwdst.mp3" type="audio/mpeg">
-        <source src="path/to/your-懒崽.ogg" type="audio/ogg">
+        <source src="music2/wslwdst.mp3" type="audio/mpeg">
+        <source src="wslwdst.ogg" type="audio/ogg">
         您的浏览器不支持音乐播放。
     </audio>
 
