--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <div class="message" id="message">🎅 祝你节日快乐，心想事成！ 🎅</div>
     <!-- 背景音乐 -->
     <audio id="bg-music" loop>
-        <source src="music2/wslwdst.mp3" type="audio/mpeg">
+        <source src="music2/wsl.mp3" type="audio/mpeg">
         您的浏览器不支持音乐播放。
     </audio>
 
