--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@
     </audio>
 
     <script>
+        let isPlaying = false;1/ 状态变量，控制音乐播放或暂停
         // 点击爱心显示个性化祝福并播放音乐
+       
         function showMessage() {
             const message = document.getElementById('message');
             message.style.display = 'block';
